--- a/src/template-service/templates/_latex/template.tex
+++ b/src/template-service/templates/_latex/template.tex
@@ -28,7 +28,7 @@
 \pagestyle{fancy}
 \fancyhf{} % Clear default header and footer
 % TODO variables
-\rfoot{Company Email: {{email}} Telephone: {{telephone}}} % Set the footer content
+\rfoot{Company Email: {{data.document.email}} Telephone: {{data.document.telephone}}} % Set the footer content
 
 % the following needs to be ran in this order
 \rhead{Page \thepage\ of \pageref{LastPage}} % Set the header content
